<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dp15">

    <TextView
        android:id="@+id/tv_multistageQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multistage_query"
        android:textColor="@color/black333"
        android:textSize="@dimen/dp14" />

    <TextView
        android:id="@+id/tv_titleQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_multistageQuery"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/title_query"
        android:textColor="@color/black333"
        android:textSize="@dimen/dp14" />

    <TextView
        android:id="@+id/edit_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp13"
        android:layout_toRightOf="@id/tv_multistageQuery"
        android:background="@mipmap/icon_searchbox_one"
        android:layout_toLeftOf="@+id/tv_select"
        android:hint="查询：学校校区"
        android:paddingLeft="@dimen/dp10"
        android:layout_alignRight="@+id/tv_endTime"
        android:paddingTop="3dp"
        android:singleLine="true"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/tv_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_select"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tv_titleQuery"
        android:background="@mipmap/icon_searchbox_two"
        android:gravity="center"
        android:hint="@string/select_startTime" />

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="1dp"
        android:layout_below="@id/edit_select"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="@dimen/dp15"
        android:layout_toRightOf="@+id/tv_startTime"
        android:background="@color/theme_color" />

    <TextView
        android:id="@+id/tv_endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_select"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/view"
        android:background="@mipmap/icon_searchbox_two"
        android:gravity="center"

        android:hint="@string/select_endTime" />

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp10"
        android:background="@mipmap/icon_search" />
</RelativeLayout>